--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "shop-app",
   "dependencies": {
-    "@polymer/polymer": "^3.0.0",
     "@polymer/app-route": "^3.0.2",
     "@polymer/iron-ajax": "^3.0.1",
     "@polymer/iron-form": "^3.0.1",
+    "@polymer/iron-icon": "^3.0.1",
+    "@polymer/iron-icons": "^3.0.1",
     "@polymer/iron-pages": "^3.0.1",
     "@polymer/iron-selector": "^3.0.1",
     "@polymer/paper-button": "^3.0.1",
+    "@polymer/paper-dialog": "^3.0.1",
+    "@polymer/paper-dialog-scrollable": "^3.0.1",
     "@polymer/paper-dropdown-menu": "^3.1.0",
     "@polymer/paper-input": "^3.2.0",
     "@polymer/paper-item": "^3.0.1",
@@ -15,6 +18,7 @@
     "@polymer/paper-menu-button": "^3.0.1",
     "@polymer/paper-tabs": "^3.1.0",
     "@polymer/paper-toast": "^3.0.1",
+    "@polymer/polymer": "^3.0.0",
     "sinon": "^9.0.1"
   },
   "devDependencies": {
